Use runtime specific cleaners.
Choose cleaners in runtime depending on a version of java platform.
Use sun.misc.Cleaner on old-fashioned JDK and
java.lang.ref.Cleaner on JDK 9 and later.